--- a/package.json
+++ b/package.json
@@ -66,5 +66,5 @@
     "registry": "https://modusbox.jfrog.io/modusbox/api/npm/level1-npm-release"
   },
   "author": "Stamen Peev <stamen.peev@softwaregroup-bg.com>",
-  "license": "CC-BY-SA-4.0"
+  "license": "Apache-2.0"
 }
